[package]
name = "pastebucket"
version = "0.3.0"
authors = ["rascul <rascul3@gmail.com>"]

[dependencies]
chrono = "0.2"
handlebars-iron = "0.18"
iron = "0.4"
logger = "0.1"
mount = "0.2"
params = "0.4"
persistent = "0.2"
router = "0.4"
rustc-serialize = "0.3"
staticfile = "0.3"
toml = "0.2"

[features]
watch = ["handlebars-iron/watch"]
